[package]
name = "tom"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
chrono = "0.4.44"
diesel = { version = "2.3.7", features = ["chrono", "postgres"] }
dotenv = "0.15.0"
env_logger = "0.11.10"
int-enum = "1.2.0"
itertools = "0.14.0"
lazy_static = "1.5.0"
log = "0.4.29"
poise = "0.6.1"
rand = "0.10.0"
regex = "1.12.3"
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
steamid-ng = "3.0.0"
tokio = { version = "1.51.1", features = ["full"] }
toml = "1.1.2"
